# Clovece

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
Client/: CMakeLists.txt  client.cpp
Client/graphic/: Graphic.cpp  Graphic.h  Settings.cpp  Settings.h
debug_leaks/: debug_new.cpp  debug_new.h  fast_mutex.h
game/: Clovece.cpp  Clovece.h  Player.cpp  Player.h
game/board/: Board.cpp  Circle.cpp  Circle.h  Figure.cpp
game/borad/: Board.cpp  Board.h  Circle.cpp  Circle.h  Figure.cpp  Figure.h
game/network/: Connection.cpp  Connection.h  Move.cpp  Move.h
graphic/: Graphic.cpp  Graphic.h  Settings.cpp  Settings.h  Settings.txt
